force-app/main/default/objects/Implementation_Services__c/Implementation_Services__c.object-meta.xml
<CustomObject>
    <label>Implementation Services</label>
    <nameField>
        <displayFormat>IST-{000000}</displayFormat>
        <label>Implementation Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>