force-app/main/default/objects/Implementation_Services__c/fields/Account_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Renewal_Date__c</fullName>
    <description>place holder</description>
    <formula>Account__r.Renewal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Renewal Date</label>
    <type>Date</type>
</CustomField>