force-app/main/default/objects/Implementation_Services__c/fields/Account_s_SFDC_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_s_SFDC_18_Digit_ID__c</fullName>
    <formula>Related_Opportunity__r.Account.SFDC_18_ID__c</formula>
    <inlineHelpText>This value is auto populated based off the Account that the Related Opportunity belongs to.  This ID will be used in the NCS process for UCaaS customers only to populate as the CorpCustomer SF Acct ID.</inlineHelpText>
    <label>Account&apos;s SFDC 18 Digit ID</label>
    <type>Text</type>
</CustomField>