force-app/main/default/objects/Implementation_Services__c/fields/Actual_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Launch_Date__c</fullName>
    <label>Actual Launch Date</label>
    <type>Date</type>
</CustomField>