force-app/main/default/objects/Implementation_Services__c/fields/Actual_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Live_Date__c</fullName>
    <description>This is populated upon close</description>
    <label>Actual Live Date</label>
    <type>Date</type>
</CustomField>