force-app/main/default/objects/Implementation_Services__c/fields/Admin_Flag__c.field-meta.xml
<CustomField>
    <fullName>Admin_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For doing data updates, etc.</description>
    <label>Admin Flag</label>
    <type>Checkbox</type>
</CustomField>