force-app/main/default/objects/Implementation_Services__c/fields/Admin_is_Licensed_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_is_Licensed_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin is Licensed User</label>
    <type>Checkbox</type>
</CustomField>