force-app/main/default/objects/Implementation_Services__c/fields/Bill_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Bill_Cycle__c</fullName>
    <label>Bill Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>26</fullName>
            </value>
            <value>
                <fullName>EOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>