force-app/main/default/objects/Implementation_Services__c/fields/Bill_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Bill_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for IST Reporting</description>
    <label>Bill Review Completed</label>
    <type>Checkbox</type>
</CustomField>