force-app/main/default/objects/Implementation_Services__c/fields/Cancelled_Notes__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Notes__c</fullName>
    <label>Cancelled Notes</label>
    <type>TextArea</type>
</CustomField>