force-app/main/default/objects/Implementation_Services__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>TEXT( Implementation_Owner__r.Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&#39;s Channel</label>
    <type>Text</type>
</CustomField>