force-app/main/default/objects/Implementation_Services__c/fields/Company_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_VAT_Number__c</fullName>
    <label>Company VAT Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>