force-app/main/default/objects/Implementation_Services__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>Field captures date when this record is marked as Completed or Cancelled</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>