force-app/main/default/objects/Implementation_Services__c/fields/Date_Billed_Actual__c.field-meta.xml
<CustomField>
    <fullName>Date_Billed_Actual__c</fullName>
    <label>Date Billed Actual</label>
    <type>Date</type>
</CustomField>