force-app/main/default/objects/Implementation_Services__c/fields/Date_Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Date_Contract_Renewal__c</fullName>
    <description>This is the date the customer contract is up for renewal</description>
    <inlineHelpText>This is the date the customer contract is up for renewal</inlineHelpText>
    <label>Date Contract Renewal</label>
    <type>Date</type>
</CustomField>