force-app/main/default/objects/Implementation_Services__c/fields/Date_of_Stage_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Stage_On_Hold__c</fullName>
    <label>Date of Stage On Hold</label>
    <type>Date</type>
</CustomField>