force-app/main/default/objects/Implementation_Services__c/fields/Days_at_Hand_off_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_at_Hand_off_Status__c</fullName>
    <formula>CASE(MOD( DATEVALUE(TS_Hand_off_Status_Set__c ) - DATE(1985,6,24),7),

0 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) -(DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD(( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c )),7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( (( DATEVALUE(TS_Hand_off_Status_Unselected__c )) - (DATEVALUE(TS_Hand_off_Status_Set__c ))) )/7)*5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is tied to your setting the Implementation Stage value to Hand-off, then by checking the Hand-off Completed checkbox.  Without doing both of these you will not see a value here.</inlineHelpText>
    <label>Days at Hand-off Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>