force-app/main/default/objects/Implementation_Services__c/fields/Dial_out_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Dial_out_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dial-out Campaign</label>
    <type>Checkbox</type>
</CustomField>