force-app/main/default/objects/Implementation_Services__c/fields/End_Nurture__c.field-meta.xml
<CustomField>
    <fullName>End_Nurture__c</fullName>
    <label>End Nurture</label>
    <type>Date</type>
</CustomField>