force-app/main/default/objects/Implementation_Services__c/fields/EquipmentArrived__c.field-meta.xml
<CustomField>
    <fullName>EquipmentArrived__c</fullName>
    <label>Equipment Arrived</label>
    <type>Date</type>
</CustomField>