force-app/main/default/objects/Implementation_Services__c/fields/Estimated_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Live_Date__c</fullName>
    <description>This is the new scheduled live date</description>
    <label>Estimated Live Date</label>
    <type>Date</type>
</CustomField>