force-app/main/default/objects/Implementation_Services__c/fields/First_Bill_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Total_Amount__c</fullName>
    <label>First Bill Total Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>