force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeet_Enterprise_Installed__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeet_Enterprise_Installed__c</fullName>
    <description>This is the number of GlobalMeet Enterprise licenses installed on this project</description>
    <inlineHelpText>This is the number of GlobalMeet Enterprise licenses installed on this project</inlineHelpText>
    <label>GlobalMeet Enterprise Installed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>