force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeet_Enterprise_Parent__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeet_Enterprise_Parent__c</fullName>
    <description>This is the number of GlobalMeet Enterprise licenses total for this account, not including this order</description>
    <inlineHelpText>This is the number of GlobalMeet Enterprise licenses total for this account, not including this order</inlineHelpText>
    <label>GlobalMeet Enterprise Parent</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>