force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetCollaborationContracted__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetCollaborationContracted__c</fullName>
    <description>This is the number of GlobalMeet Collaboration licenses on the contract</description>
    <inlineHelpText>This is the number of GlobalMeet Collaboration licenses on the contract</inlineHelpText>
    <label>GlobalMeet Collaboration Contracted</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>