force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetCollaborationInstalled__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetCollaborationInstalled__c</fullName>
    <description>This is the number of GlobalMeet Collaboration licenses installed on this project</description>
    <inlineHelpText>This is the number of GlobalMeet Collaboration licenses installed on this project</inlineHelpText>
    <label>GlobalMeet Collaboration Installed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>