force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetPremiumContracted__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetPremiumContracted__c</fullName>
    <description>This is the number of GlobalMeet Premium licenses on the contract</description>
    <inlineHelpText>This is the number of GlobalMeet Premium licenses on the contract</inlineHelpText>
    <label>GlobalMeet Premium Contracted</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>