force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetPremiumParent__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetPremiumParent__c</fullName>
    <description>This is the number of GlobalMeet Premium licenses total for this account, not including this order</description>
    <inlineHelpText>This is the number of GlobalMeet Premium licenses total for this account, not including this order</inlineHelpText>
    <label>GlobalMeet Premium Parent</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>