force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetStandardContracted__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetStandardContracted__c</fullName>
    <description>This is the number of GlobalMeet Standard licenses on the contract</description>
    <inlineHelpText>This is the number of GlobalMeet Standard licenses on the contract</inlineHelpText>
    <label>GlobalMeet Standard Contracted</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>