force-app/main/default/objects/Implementation_Services__c/fields/GlobalMeetStandardInstalled__c.field-meta.xml
<CustomField>
    <fullName>GlobalMeetStandardInstalled__c</fullName>
    <description>This is the number of GlobalMeet Standard licenses installed on this project</description>
    <inlineHelpText>This is the number of GlobalMeet Standard licenses installed on this project</inlineHelpText>
    <label>GlobalMeet Standard Installed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>