force-app/main/default/objects/Implementation_Services__c/fields/Hours_Completed__c.field-meta.xml
<CustomField>
    <fullName>Hours_Completed__c</fullName>
    <description>This is based on the FlightReady type</description>
    <label>Hours Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>