force-app/main/default/objects/Implementation_Services__c/fields/iMC_Account_Link__c.field-meta.xml
<CustomField>
    <fullName>iMC_Account_Link__c</fullName>
    <description>iMC cases didn&apos;t require an Oppty, but an Acct.  This is a link for the Account related to this Implementation.</description>
    <inlineHelpText>Account related to this Implementation Service.</inlineHelpText>
    <label>iMC Account Link</label>
    <type>Url</type>
</CustomField>