force-app/main/default/objects/Implementation_Services__c/fields/iMC_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>iMC_Case_Number__c</fullName>
    <description>Case number for historical searches</description>
    <label>iMC Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>