force-app/main/default/objects/Implementation_Services__c/fields/iMC_Customer_Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>iMC_Customer_Billing_ID__c</fullName>
    <description>not on page layout, historical only</description>
    <label>iMC Customer Billing ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>