force-app/main/default/objects/Implementation_Services__c/fields/iMC_Flightready__c.field-meta.xml
<CustomField>
    <fullName>iMC_Flightready__c</fullName>
    <description>Historical from Case, not on page layout</description>
    <label>iMC Flightready</label>
    <type>TextArea</type>
</CustomField>