force-app/main/default/objects/Implementation_Services__c/fields/iMC_Reason__c.field-meta.xml
<CustomField>
    <fullName>iMC_Reason__c</fullName>
    <description>historical</description>
    <label>iMC Reason</label>
    <length>40</length>
    <type>Text</type>
</CustomField>