force-app/main/default/objects/Implementation_Services__c/fields/iMC_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>iMC_Record_Status__c</fullName>
    <description>For the record - possibly delete</description>
    <label>iMC Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>