force-app/main/default/objects/Implementation_Services__c/fields/Implementation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Implementation_Services_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>