force-app/main/default/objects/Implementation_Services__c/fields/Implementation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Stage__c</fullName>
    <label>Implementation Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-contract</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Build</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>No IS Assigned</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
                <isActive>false</isActive>
                <label>Adoption</label>
            </value>
            <value>
                <fullName>Bill Review</fullName>
                <isActive>false</isActive>
                <label>Bill Review</label>
            </value>
            <value>
                <fullName>Configuration</fullName>
                <isActive>false</isActive>
                <label>Configuration</label>
            </value>
            <value>
                <fullName>Discovery</fullName>
                <isActive>false</isActive>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Hand-off</fullName>
                <isActive>false</isActive>
                <label>Hand-off</label>
            </value>
            <value>
                <fullName>Initial Communication</fullName>
                <isActive>false</isActive>
                <label>Initial Communication</label>
            </value>
            <value>
                <fullName>Launched</fullName>
                <isActive>false</isActive>
                <label>Launched</label>
            </value>
            <value>
                <fullName>Onboarding</fullName>
                <isActive>false</isActive>
                <label>Onboarding</label>
            </value>
            <value>
                <fullName>Pilot Team</fullName>
                <isActive>false</isActive>
                <label>Pilot Team</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>