force-app/main/default/objects/Implementation_Services__c/fields/Implementation_Summary__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Summary__c</fullName>
    <description>To be completed when switching status to &quot;launched&quot;</description>
    <label>Implementation Summary</label>
    <type>TextArea</type>
</CustomField>