force-app/main/default/objects/Implementation_Services__c/fields/Implementation_Type__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Implementation</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Enterprise Setup</fullName>
            </value>
            <value>
                <fullName>New Agent</fullName>
            </value>
            <value>
                <fullName>New Reseller</fullName>
            </value>
            <value>
                <fullName>Partner End Customer</fullName>
            </value>
            <value>
                <fullName>Small Projects</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>