force-app/main/default/objects/Implementation_Services__c/fields/Implemented_License_Count__c.field-meta.xml
<CustomField>
    <fullName>Implemented_License_Count__c</fullName>
    <description>Field allows IST to capture the number of licenses that were installed for this project.</description>
    <label>Implemented License Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>