force-app/main/default/objects/Implementation_Services__c/fields/InstallationDate__c.field-meta.xml
<CustomField>
    <fullName>InstallationDate__c</fullName>
    <label>Installation Date</label>
    <type>Date</type>
</CustomField>