force-app/main/default/objects/Implementation_Services__c/fields/Invoice_Language__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Language__c</fullName>
    <label>Invoice Language</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NCS_Company_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>