force-app/main/default/objects/Implementation_Services__c/fields/IST_Completed__c.field-meta.xml
<CustomField>
    <fullName>IST_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only select once all Implementation Steps have been completed as this will update the Opportunity to Closed Won - Implementation Completed</inlineHelpText>
    <label>x-IST Completed</label>
    <type>Checkbox</type>
</CustomField>