force-app/main/default/objects/Implementation_Services__c/fields/IST_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>IST_Completed_Status__c</fullName>
    <inlineHelpText>Used to track the final status of an implementation.  Please select Completed or Cancelled to completely close this implementation record.</inlineHelpText>
    <label>Implementation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>No IS Assigned</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Disengaged</fullName>
            </value>
            <value>
                <fullName>On-Track</fullName>
            </value>
            <value>
                <fullName>Off-Track</fullName>
            </value>
            <value>
                <fullName>Standby</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>