force-app/main/default/objects/Implementation_Services__c/fields/IST_Notes__c.field-meta.xml
<CustomField>
    <fullName>IST_Notes__c</fullName>
    <label>IST Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>