force-app/main/default/objects/Implementation_Services__c/fields/IST_Survey__c.field-meta.xml
<CustomField>
    <fullName>IST_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IST Survey</label>
    <type>Checkbox</type>
</CustomField>