force-app/main/default/objects/Implementation_Services__c/fields/Last_modified_Date_by_non_admin__c.field-meta.xml
<CustomField>
    <fullName>Last_modified_Date_by_non_admin__c</fullName>
    <description>Date/Time field that is set via WF Rule whenever a non-admin updates an Account in SFDC. Used to see rep neglecting account trends, etc.</description>
    <label>Last modified Date by (non-admin)</label>
    <type>DateTime</type>
</CustomField>