force-app/main/default/objects/Implementation_Services__c/fields/Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Date__c</fullName>
    <description>This is the planned live date set by the case owner</description>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>