force-app/main/default/objects/Implementation_Services__c/fields/Master_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Master_Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Used to lookup Implementation records flagged as IsMaster</inlineHelpText>
    <label>Master Implementation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please make sure the IsMaster Implementation checkbox is selected on the record you are trying to lookup.</errorMessage>
        <filterItems>
            <field>Implementation_Services__c.Master_Implementation_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Implementation_Services__c</referenceTo>
    <relationshipLabel>Follow-on Implementations</relationshipLabel>
    <relationshipName>Implementation_Services</relationshipName>
    <type>Lookup</type>
</CustomField>