force-app/main/default/objects/Implementation_Services__c/fields/Master_Implementation_Record__c.field-meta.xml
<CustomField>
    <fullName>Master_Implementation_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select this only when you need to relate other Implementation Records to this one.  Used with the Master Implementation Lookup field.</inlineHelpText>
    <label>IsMaster Implementation Record</label>
    <type>Checkbox</type>
</CustomField>