force-app/main/default/objects/Implementation_Services__c/fields/Multi_Regional_or_Global__c.field-meta.xml
<CustomField>
    <fullName>Multi_Regional_or_Global__c</fullName>
    <label>Multi-Regional or Global</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>