force-app/main/default/objects/Implementation_Services__c/fields/NCS_Admin_Address__c.field-meta.xml
<CustomField>
    <fullName>NCS_Admin_Address__c</fullName>
    <label>Admin Address </label>
    <length>50</length>
    <type>Text</type>
</CustomField>