force-app/main/default/objects/Implementation_Services__c/fields/NCS_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>NCS_Admin_Email__c</fullName>
    <label>Admin Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>