force-app/main/default/objects/Implementation_Services__c/fields/NCS_Admin_First_Name__c.field-meta.xml
<CustomField>
    <fullName>NCS_Admin_First_Name__c</fullName>
    <label>Admin First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>