force-app/main/default/objects/Implementation_Services__c/fields/NCS_Affiliate_Company_IDs__c.field-meta.xml
<CustomField>
    <fullName>NCS_Affiliate_Company_IDs__c</fullName>
    <label>Affiliate Company IDs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>